--- a/src/app/pages/customer-list/customer-list.component.scss
+++ b/src/app/pages/customer-list/customer-list.component.scss
@@ -89,15 +89,17 @@
 ,#d2d2d2 1px,hsla(0,0%,82%,0) 0);
 }
 
-@keyframes rotate {
-    from {transform: rotate(0deg)}
-    to {transform: rotate(360deg)}
-}
-.refresh-start {
-    animation-name: rotate;
+@keyframes flickerAnimation {
+    0%   { opacity:1; }
+    50%  { opacity:0; }
+    100% { opacity:1; }
+  }
+  
+  .trash-fade {
+    animation-name: flickerAnimation;
     animation-duration: 1s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
     animation-play-state: running;
-    
-}
+  }
+  
