--- a/src/app/pages/order-list/order-list.component.html
+++ b/src/app/pages/order-list/order-list.component.html
@@ -32,7 +32,7 @@
         </select>
       </div>
     </div>
-    <button class="btn btn-warning w-100" [routerLink]="'0'">Add new Order
+    <button class="btn btn-warning w-100" [routerLink]="'0'" [disabled]="actionEvent">Add new Order
       <i class="material-icons align-text-center pl-3">post_add</i>
     </button>
     <div class="table-responsive">
@@ -46,7 +46,8 @@
               <i *ngIf="columnKey === 'id' && direction === 'dsc'"
                 class="material-icons align-text-bottom">keyboard_arrow_up</i>
             </th>
-            <th class="text-center" (click)="onColumnSelect('customerID')" class="table-order__th--customerId">Customer Id
+            <th class="text-center" (click)="onColumnSelect('customerID')" class="table-order__th--customerId">Customer
+              Id
               <i *ngIf="columnKey !== 'customerID'" class="material-icons align-text-bottom">indeterminate_check_box</i>
               <i *ngIf="columnKey === 'customerID' && direction === 'asc'"
                 class="material-icons align-text-top">keyboard_arrow_down</i>
@@ -86,11 +87,16 @@
             <td class="text-center">{{ order.status }}</td>
             <td class="text-center">
               <div class="btn-group">
-                <button class="btn btn-info" [routerLink]="[order.id]">
+                <button class="btn btn-info" [routerLink]="[order.id]" [disabled]="actionEvent">
                   <i class="material-icons">mode_edit</i>
                 </button>
-                <button class="btn btn-danger" (click)="onConfirmDelete(order.id)">
+                <button *ngIf="!actionEvent" class="btn btn-danger" (click)="onConfirmDelete(order.id)"
+                  [disabled]="actionEvent">
                   <i class="material-icons">delete_forever</i>
+                </button>
+                <button *ngIf="actionEvent" class="btn btn-danger" [disabled]="actionEvent">
+                  <i class="material-icons"
+                    [ngClass]="{'trash-fade': order.id === clickedElementID }">delete_forever</i>
                 </button>
               </div>
             </td>
