--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -51,7 +51,8 @@
           </div>
         </div>
         <div class="col-12">
-          <button class="btn btn-warning w-100" [routerLink]="'0'">Add New Product
+          <button class="btn btn-warning w-100" [routerLink]="'0'" [disabled]="actionEvent">Add New
+            Product
             <i class="material-icons align-text-center pl-3">add_shopping_cart</i>
           </button>
           <div class="table-responsive">
@@ -136,11 +137,17 @@
                   <td class="text-right">{{ product.active }}</td>
                   <td>
                     <div class="btn-group">
-                      <button class="btn btn-info" [routerLink]="[product.id]">
+                      <button class="btn btn-info" [routerLink]="[product.id]" [disabled]="actionEvent">
                         <i class="material-icons">mode_edit</i>
                       </button>
-                      <button class="btn btn-danger pull-right" (click)="onConfirmDelete(product.id)">
+                      <button *ngIf="!actionEvent" class="btn btn-danger pull-right"
+                        (click)="onConfirmDelete(product.id)" [disabled]="actionEvent">
                         <i class="material-icons">delete_forever</i>
+                      </button>
+                      <button *ngIf="actionEvent" class="btn btn-danger pull-right"
+                        (click)="onConfirmDelete(product.id)" [disabled]="actionEvent">
+                        <i class="material-icons"
+                          [ngClass]="{'trash-fade': product.id === clickedElementID }">delete_forever</i>
                       </button>
                     </div>
                   </td>
