--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,36 @@
   color: #9b0404;
   transition: all ease-in .4s;
 }
+
+@keyframes flickerAnimation {
+  0%   { opacity:1; }
+  50%  { opacity:0; }
+  100% { opacity:1; }
+}
+
+.trash-fade {
+  animation-name: flickerAnimation;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-play-state: running;
+}
+
+
+.loading-refresh{
+  color: #00bcd4;
+  font-size: 40px;
+}
+
+@keyframes rotate {
+  from {transform: rotate(0deg)}
+  to {transform: rotate(360deg)}
+}
+.refresh-start {
+  animation-name: rotate;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-play-state: running;
+  
+}
